Fix for Bug #9280 with regards to an Expect header.  patch submitted by Ilia <ilia@prohost.org> # someone just give the man his php4 karma please!

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@92032 c90b9560-bf6c-de11-be94-00142212c4b1