sapi/apache/mod_php4.c
@@ -129,6 +129,14 @@ int sapi_apache_read_post(char *buffer, uint count_bytes TSRMLS_DC)
 	request_rec *r = (request_rec *) SG(server_context);
 	void (*handler)(int);
 
+	/*
+	 * This handles the situation where the browser sends a Expect: 100-continue header
+	 * and needs to recieve confirmation from the server on whether or not it can send
+	 * the rest of the request. RFC 2616
+	 *
+	 */
+	if( !ap_should_client_block(r) ) return total_read_bytes;
+ 
 	handler = signal(SIGPIPE, SIG_IGN);
 	while (total_read_bytes<count_bytes) {
 		hard_timeout("Read POST information", r); /* start timeout timer */
